--- a/FromBoard Delivery/index.html
+++ b/FromBoard Delivery/index.html
@@ -74,14 +74,14 @@
                     <ul class="menu-b menu-3">
                         <li class="menu-b-item">
                             <ul class="menu-b-l">
-                                <li><a class="menu-b-l-item" href="#">Калькулятор</a></li>
-                                <li><a class="menu-b-l-item" href="#">О нас</a></li>
-                                <li><a class="menu-b-l-item" href="#">Гарантии</a></li>
-                                <li><a class="menu-b-l-item" href="#">Отзывы</a></li>
+                                <li><a class="menu-b-l-item" href="#kalkulator">Калькулятор</a></li>
+                                <li><a class="menu-b-l-item" href="#about">О нас</a></li>
+                                <li><a class="menu-b-l-item" href="#garan">Гарантии</a></li>
+                                <li><a class="menu-b-l-item" href="#ots">Отзывы</a></li>
                             </ul>
                         </li>
                         <li class="menu-b-item">
-                            <button>Оставить заявку</button>
+                            <button><a href="#b-d">Оставить заявку</a></button>
                         </li>
                     </ul>
                 </li>
@@ -94,6 +94,7 @@
                 </li>
             </ul>
         </div>
+        <span id="kalkulator"></span>
     </header>
     <section class="sec-1 sec">
         <div class="container-1">
@@ -129,6 +130,7 @@
                 </ul>
             </ul>
         </div>
+        <span id="about"></span>
     </section>
     <section class="sec-2 sec">
         <div class="container-1">
@@ -178,6 +180,7 @@
                 </ul>
             </ul>
         </div>
+        <span id="garan"></span>
     </section>
     <section class="sec-3 sec">
         <div class="container">
@@ -206,8 +209,8 @@
             <div class="button-3-1">
                 <button class="button-3">Показать больше документов</button>
             </div>
-            
         </div>
+        <span id="ots"></span>
     </section>
     <section class="sec sec-4">
         <div class="container con-2">
@@ -257,6 +260,7 @@
                 </svg>
             </button>
         </div>
+        <span id="b-d"></span>
     </section>
     <section class="sec-5 sec">
         <div class="container">
@@ -279,10 +283,10 @@
         <div class="container">
             <div class="f">
                 <ul class="up-f-2-2">
-                    <li class="up-2-l">Калькулятор</li>
-                    <li class="up-2-l">О нас</li>
-                    <li class="up-2-l">Гарантии</li>
-                    <li class="up-2-l">Отзывы</li>
+                    <li><a class="up-2-l" href="#kalkulator">Калькулятор</a></li>
+                    <li><a class="up-2-l" href="#about">О нас</a></li>
+                    <li><a class="up-2-l" href="#garan">Гарантии</a></li>
+                    <li><a class="up-2-l" href="#ots">Отзывы</a></li>
                 </ul>
                 <ul class="up-f">
                     <ul class="up-f-1">
@@ -310,10 +314,10 @@
                         </li>
                     </ul>
                     <ul class="up-f-2">
-                        <li class="up-2-l">Калькулятор</li>
-                        <li class="up-2-l">О нас</li>
-                        <li class="up-2-l">Гарантии</li>
-                        <li class="up-2-l">Отзывы</li>
+                        <li><a class="up-2-l" href="#kalkulator">Калькулятор</a></li>
+                        <li><a class="up-2-l" href="#about">О нас</a></li>
+                        <li><a class="up-2-l" href="#garan">Гарантии</a></li>
+                        <li><a class="up-2-l" href="#ots">Отзывы</a></li>
                     </ul>
                     <ul class="up-f-3">
                         <p class="up-p-1">+7 (800) 123 45-67</p>
